# secretik

./: .gitignore  Cargo.toml  LICENSE  Makefile  readme.md
.github/workflows/: ci.yml  release.yml
src/: args.rs  main.rs
src/cli/: mod.rs  utils.rs
src/cmd/: decrypt.rs  encrypt.rs  label.rs  mod.rs  qr.rs
src/crypt/: mod.rs  tests.rs
