[package]
name = "secretik"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/swfit1337/secretik"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
qrcode = { version = "0.14.1", default-features = false }
names = "0.14.0"
argon2 = "0.5.3"
rand = "0.9.1"
base64 = "0.22.1"
anyhow = "1.0.98"
aes-gcm = "0.10.3"
