[package]
name = "secretik"
version = "0.1.0"
edition = "2024"
readme = "readme.md"
license = "MIT"
repository = "https://github.com/swift1337/secretik"
description = "Opinionated cli tool for encrypting secrets"
homepage = "https://github.com/swift1337/secretik"
keywords = ["cli", "secret", "encryption", "argon2", "aes-gcm"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "secretik"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
qrcode = { version = "0.14.1", default-features = false }
names = "0.14.0"
argon2 = "0.5.3"
rand = "0.9.1"
base64 = "0.22.1"
anyhow = "1.0.98"
aes-gcm = "0.10.3"
rpassword = "7.4.0"
colored = "3.0.0"
